--- a/index.html
+++ b/index.html
@@ -2,103 +2,116 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>YouTube Carousel</title>
+  <title>Cyber 3D Cube</title>
   <style>
-    html, body {
+    body, html {
       margin: 0;
-      padding: 0;
-      height: 100vh;
+      height: 100%;
       overflow: hidden;
-      font-family: sans-serif;
-      background-color: #000;
-      background-image: url('https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExN2M0Z2NvNjlkaXB5M3ZubXl6bjJzMTk1ZTZ0emRkbDM4b24zZ3RnYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/C5vR7fyscDw5iGew4I/giphy.gif');
-      background-repeat: repeat;
-      background-size: 120px auto;
+      background: radial-gradient(ellipse at center, #001100 0%, #000000 100%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Courier New', Courier, monospace;
     }
 
-    .carousel {
-      height: 100vh;
-      width: 100vw;
+    .scene {
+      width: 300px;
+      height: 300px;
+      perspective: 1000px;
+    }
+
+    .cube {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transform-style: preserve-3d;
+      transform: rotateX(-20deg) rotateY(20deg);
+      transition: transform 0.1s ease-out;
+    }
+
+    .face {
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      background: rgba(0, 255, 0, 0.1);
+      border: 2px solid #00ff00;
+      box-shadow: 0 0 20px #00ff00;
       display: flex;
       align-items: center;
       justify-content: center;
-      position: relative;
+      color: #00ff00;
+      font-size: 2em;
+      text-shadow: 0 0 5px #00ff00;
+      box-sizing: border-box;
     }
 
-    .video-container {
-      width: 75vw;
-      height: 75vh;
-      background: #111;
-      overflow: hidden;
-      position: relative;
-      z-index: 1;
-    }
+    .front  { transform: rotateY(0deg) translateZ(150px); }
+    .back   { transform: rotateY(180deg) translateZ(150px); }
+    .right  { transform: rotateY(90deg) translateZ(150px); }
+    .left   { transform: rotateY(-90deg) translateZ(150px); }
+    .top    { transform: rotateX(90deg) translateZ(150px); }
+    .bottom { transform: rotateX(-90deg) translateZ(150px); }
 
-    .video-container iframe {
+    .face::before {
+      content: "";
+      position: absolute;
       width: 100%;
       height: 100%;
-      border: none;
-    }
-
-    .arrow {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 2.5rem;
-      color: #fff;
-      background: rgba(0,0,0,0.6);
-      border: none;
-      padding: 0.5rem 1rem;
-      cursor: pointer;
-      z-index: 2;
-    }
-
-    .arrow.left {
-      left: calc(50% - 37.5vw - 60px); /* outside the left edge of video container */
-    }
-
-    .arrow.right {
-      right: calc(50% - 37.5vw - 60px); /* outside the right edge of video container */
+      background-image: linear-gradient(#00ff00 1px, transparent 1px), 
+                        linear-gradient(to right, #00ff00 1px, transparent 1px);
+      background-size: 30px 30px;
+      opacity: 0.05;
+      pointer-events: none;
     }
   </style>
 </head>
 <body>
-
-  <div class="carousel">
-    <button class="arrow left" onclick="changeVideo(-1)">&#9664;</button>
-    <div class="video-container" id="videoContainer"></div>
-    <button class="arrow right" onclick="changeVideo(1)">&#9654;</button>
+  <div class="scene">
+    <div class="cube" id="cube">
+      <div class="face front">FRONT</div>
+      <div class="face back">BACK</div>
+      <div class="face right">RIGHT</div>
+      <div class="face left">LEFT</div>
+      <div class="face top">TOP</div>
+      <div class="face bottom">BOTTOM</div>
+    </div>
   </div>
 
   <script>
-    const videoIds = [
-      "hrgcRAryUaY",
-      "9SBnKTBPpME",
-      "B2CpcHIxaOw",
-      "dKlpKE7x7mY",
-      "eMiwRjiQpV4",
-      "7r_3tZ0SzDc"
-    ];
-    let currentIndex = 0;
-    const container = document.getElementById('videoContainer');
+    const cube = document.getElementById('cube');
+    let isDragging = false;
+    let previousX, previousY;
+    let rotationX = -20;
+    let rotationY = 20;
 
-    function loadVideo(index) {
-      container.innerHTML = '';
-      const iframe = document.createElement('iframe');
-      iframe.src = `https://www.youtube.com/embed/${videoIds[index]}?autoplay=1&mute=1&controls=0&rel=0&playsinline=1`;
-      iframe.allow = 'autoplay; encrypted-media';
-      container.appendChild(iframe);
-    }
+    document.addEventListener('mousedown', (e) => {
+      isDragging = true;
+      previousX = e.clientX;
+      previousY = e.clientY;
+    });
 
-    function changeVideo(direction) {
-      currentIndex += direction;
-      if (currentIndex < 0) currentIndex = videoIds.length - 1;
-      if (currentIndex >= videoIds.length) currentIndex = 0;
-      loadVideo(currentIndex);
-    }
+    document.addEventListener('mousemove', (e) => {
+      if (!isDragging) return;
 
-    loadVideo(currentIndex);
+      const deltaX = e.clientX - previousX;
+      const deltaY = e.clientY - previousY;
+      rotationY += deltaX * 0.5;
+      rotationX -= deltaY * 0.5;
+
+      cube.style.transform = `rotateX(${rotationX}deg) rotateY(${rotationY}deg)`;
+
+      previousX = e.clientX;
+      previousY = e.clientY;
+    });
+
+    document.addEventListener('mouseup', () => {
+      isDragging = false;
+    });
+
+    document.addEventListener('mouseleave', () => {
+      isDragging = false;
+    });
   </script>
-
 </body>
 </html>
