--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
 
     .scene {
       perspective: 1200px;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .cube {
       position: relative;
       transform-style: preserve-3d;
+      transform: rotateX(0deg) rotateY(0deg);
       transition: transform 1.2s cubic-bezier(0.22, 1, 0.36, 1);
     }
 
