--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
     .cube {
       position: relative;
-      width: 200px;
-      height: 200px;
       transform-style: preserve-3d;
       transform: rotateX(0deg) rotateY(0deg);
+      width: 200px;
+      height: 200px;
       transition: transform 1s cubic-bezier(0.22, 1, 0.36, 1);
     }
 
@@ -37,7 +37,6 @@
       position: absolute;
       background: rgba(0, 255, 0, 0.1);
       border: 2px solid #00ff00;
-      box-shadow: 0 0 20px #00ff00;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -45,18 +44,8 @@
       font-size: 1.5em;
       text-shadow: 0 0 5px #00ff00;
       box-sizing: border-box;
-    }
-
-    .face::before {
-      content: "";
-      position: absolute;
       width: 100%;
       height: 100%;
-      background-image: linear-gradient(#00ff00 1px, transparent 1px),
-                        linear-gradient(to right, #00ff00 1px, transparent 1px);
-      background-size: 20px 20px;
-      opacity: 0.05;
-      pointer-events: none;
     }
 
     .front  { transform: rotateY(  0deg) translateZ(100px); }
@@ -65,6 +54,19 @@
     .left   { transform: rotateY(-90deg) translateZ(100px); }
     .top    { transform: rotateX( 90deg) translateZ(100px); }
     .bottom { transform: rotateX(-90deg) translateZ(100px); }
+
+    /* Add green grid effect to each face */
+    .face::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-image: linear-gradient(#00ff00 1px, transparent 1px),
+                        linear-gradient(to right, #00ff00 1px, transparent 1px);
+      background-size: 20px 20px;
+      opacity: 0.1;
+      pointer-events: none;
+    }
   </style>
 </head>
 <body>
@@ -89,12 +91,12 @@
     let startY = 0;
     let dragging = false;
 
-    // Ensure that the cube size is adjusted to fit within the scene bounds
+    // Ensure cube fits within the viewport without getting cropped
     function adjustCubeSize() {
       const sceneWidth = window.innerWidth;
       const sceneHeight = window.innerHeight;
 
-      // Maintain a 3D aspect ratio for the cube to ensure it fits within the scene
+      // Maintain a maximum size that fits in the viewport
       const maxSize = Math.min(sceneWidth, sceneHeight) * 0.4; // Cube size shouldn't exceed 40% of the viewport
       cubeSize = Math.min(cubeSize, maxSize);
       cube.style.width = cube.style.height = cubeSize + 'px';
