--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     }
 
     #container {
-      width: 80vmin;
-      height: 80vmin;
+      width: 100%;
+      height: 100%;
       position: relative;
     }
 
@@ -45,7 +45,7 @@
   <script>
     // Set up scene, camera, and renderer
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000); // Adjusted FOV
     const renderer = new THREE.WebGLRenderer();
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.getElementById('container').appendChild(renderer.domElement);
@@ -61,7 +61,7 @@
     const cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
     scene.add(cube);
 
-    // Position the camera further back to fit the whole cube
+    // Position the camera farther back to fit the whole cube
     camera.position.z = 15;
 
     // Add terminal-like text to each face of the cube
@@ -111,7 +111,6 @@
 
     // Apply gravitational force (ensure text stays upright)
     function applyGravitationalForce() {
-      const vector = new THREE.Vector3(0, 1, 0);
       cube.rotation.x = Math.round(cube.rotation.x / Math.PI) * Math.PI; // Snap to upright
       cube.rotation.y = Math.round(cube.rotation.y / Math.PI) * Math.PI; // Snap to upright
     }
